Add Product entity with MongoDB integration
Introduces a new `Product` entity and integrates MongoDB into the project. Updated `ApplicationDbContext` to include `Product` and added necessary migration files for entity creation. Also, adjusted `appsettings.json` for MongoDB connection string configuration.

--- a/WebApp.Strategy/appsettings.json
+++ b/WebApp.Strategy/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=DesignPatternIdentity;Username=csbulak;Password=123123;Trust Server Certificate=true;"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=DesignPatternIdentity;Username=csbulak;Password=123123;Trust Server Certificate=true;",
+    "MongoDb": "mongodb+srv://csbulak:1453Cemalb..@cluster0.vupl9.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
   },
   "Logging": {
     "LogLevel": {
